# hermes-vault

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  policy.example.yaml  pyproject.toml
.github/: mypy-cleanup.patch.gz.b64  ruff-cleanup-trigger.txt
.github/workflows/: ci.yml  post-merge-security-validation.yml  publish-to-pypi.yml  ruff-branch-fixer.yml  ruff-finalize.yml  ruff-safe-autofix.yml
data/: oauth-default-providers.yaml
docs/: ARCHITECTURE.md  architecture.md  contributor-architecture.md  credential-lifecycle.md  mcp-integration.md  mcp-server.md  operator-guide.md  roadmap-v0.8.0-dashboard.md  threat-model.md  windows.md
release-readiness/v0.20.0/: readiness-report.md
release-readiness/v0.21.0/: readiness-report.md
scripts/: deploy-hermesvault-site.sh
site/: app.js  index.html  styles.css
src/hermes_vault/: __init__.py  (+26 more)
tests/: test_audit.py  test_audit_integrity_core.py  test_audit_integrity_toctou.py  test_audit_surfaces.py  test_backup_recovery.py  test_broker.py  test_cli.py  test_config.py  test_dashboard.py  test_detectors.py  test_diff.py  test_dpapi.py  test_governance.py  test_health.py  test_key_management.py  test_maintenance.py  test_mcp_server.py  test_oauth.py  test_oauth_device.py  test_oauth_exchange.py  test_oauth_flow.py  test_oauth_refresh.py  test_platform.py  test_policy.py  test_policy_doctor.py  test_refresh.py  test_release_regression.py  test_service_ids.py  test_status.py  test_sync_skill.py  test_update.py  test_vault.py  test_verifier.py
validation/: packaged_dashboard_proof.py  real_dpapi_validation.py
(+13 files in other folders)
